# engine-rs

./: Cargo.toml  README.md
assets/viewer/scenes/: test.scene
core/: Cargo.toml
core/src/fs/: mod.rs
core/src/math/: mod.rs  quaternion.rs  vector.rs
ecs/: Cargo.toml
ecs/src/: entity.rs  system.rs
engine/: Cargo.toml
engine/src/: actor.rs  config.rs  lib.rs  quaternion.rs  scene.rs  transform.rs  vector.rs
engine/src/assets/: actor.rs  component.rs  mod.rs  prefab.rs  resource.rs  scene.rs
engine/src/components/: camera.rs  mesh.rs  mod.rs  transform.rs
engine/src/systems/: mod.rs  render.rs
game/: Cargo.toml
game/src/: main.rs
renderer/: Cargo.toml
renderer/src/: lib.rs  vulkan.rs
renderer/src/shaders/: simple.rs
viewer/: Cargo.toml
viewer/src/: main.rs  options.rs
