[package]
name = "core"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "core"
path = "src/lib.rs"

[dependencies]

anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
