[package]
name = "engine"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]

anyhow = "1.0"
chrono = "0.4"
imgui = "0.2"
imgui-winit-support = "0.2"
log = "0.4"
parking_lot = "0.9"
serde_json = "1.0"
specs = "0.15"
specs-derive = "0.4"
typetag = "0.1"
winit = "0.19"

serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde"] }

core = { path = "../core" }
renderer = { path = "../renderer", features = ["validation"] }
