[package]
name = "game"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "game"
path = "src/main.rs"

[dependencies]

failure = "0.1"

engine = { path = "../engine" }
