[package]
name = "renderer"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

derivative = "1.0"
failure = "0.1"
vulkano = "0.14"
vulkano-shaders = "0.14"
vulkano-win = "0.14"
winit = "0.19"

[features]

default = ["validation"]

validation = []
