[package]
name = "viewer"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "viewer"
path = "src/main.rs"

[dependencies]

anyhow = "1.0"
flexi_logger = "0.14"
log = "0.4"
structopt = "0.3"

engine = { path = "../engine" }
